# mlir

examples/Linalg/Linalg1/lib/: CMakeLists.txt
examples/Linalg/Linalg2/lib/: CMakeLists.txt
examples/Linalg/Linalg3/lib/: CMakeLists.txt
examples/Linalg/Linalg4/lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt
lib/Conversion/GPUToCUDA/: CMakeLists.txt
lib/Conversion/GPUToNVVM/: CMakeLists.txt
lib/Conversion/GPUToROCDL/: CMakeLists.txt
lib/Conversion/GPUToSPIRV/: CMakeLists.txt
lib/Conversion/LoopToStandard/: CMakeLists.txt
lib/Conversion/LoopsToGPU/: CMakeLists.txt
lib/Conversion/StandardToLLVM/: CMakeLists.txt
lib/Conversion/StandardToSPIRV/: CMakeLists.txt
lib/Conversion/VectorToLLVM/: CMakeLists.txt
lib/Dialect/: CMakeLists.txt
lib/Dialect/AffineOps/: CMakeLists.txt
lib/Dialect/FxpMathOps/: CMakeLists.txt
lib/Dialect/GPU/: CMakeLists.txt
lib/Dialect/LLVMIR/: CMakeLists.txt
lib/Dialect/Linalg/: CMakeLists.txt
lib/Dialect/QuantOps/: CMakeLists.txt
lib/Dialect/SDBM/: CMakeLists.txt
lib/Dialect/SPIRV/: CMakeLists.txt
lib/Dialect/SPIRV/Serialization/: CMakeLists.txt
lib/Dialect/SPIRV/Transforms/: CMakeLists.txt
lib/Dialect/StandardOps/: CMakeLists.txt
lib/Dialect/VectorOps/: CMakeLists.txt
lib/EDSC/: CMakeLists.txt
lib/ExecutionEngine/: CMakeLists.txt
lib/IR/: CMakeLists.txt
lib/Quantizer/: CMakeLists.txt
lib/Support/: CMakeLists.txt
lib/Transforms/: CMakeLists.txt
lib/Transforms/Utils/: CMakeLists.txt
lib/Translation/: CMakeLists.txt
test/lib/IR/: CMakeLists.txt
test/lib/Pass/: CMakeLists.txt
test/lib/TestDialect/: CMakeLists.txt
test/lib/Transforms/: CMakeLists.txt
tools/mlir-opt/: CMakeLists.txt
